This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

06-May-2002 (Lars Duening)  (3.3.207)
    - (smalloc.c) With CHECK_OBJECT_GC_REF, small chunks could lead to
         misleading diagnostics during the GC.

03-May-2002 (Lars Duening)  (3.3.206)
    - (interpret) The H_DEFAULT_METHOD can now be specified with varargs
         arguments and still receive by-reference variables, similar to
         the call_other() sefun (reported by Bardioc).
    - (prolang.y) Reworked the program block reallocations to make sure
         that their bounds won't be overwritten. This could have been
         the reasons for the crashers on corrupted memory (reported by Coogan).

01-May-2002 (Lars Duening)
    - (settings/dt2) Updated the DeeperTrouble settings file; and also
         removed the mud/dt2 directory since it's no longer necessary
         (thanks, Lasse!).

26-Apr-2002 (Lars Duening)  (3.3.205)
    - (prolang.y) Hiding an inherited private nosave variable with an
         inherited non-private variable didn't work (reported by Gnomi).
    - (prolang.y, lex.c, simulate.c) Compiler error and warning messages
         all have the format '<file> line <line>: <text>' now.
    - (prolang.y, swap.c) Oops, the linenumber structure was allocated too
         small on creation, and read in incorrectly from swap.
    - (driver.h) Deactivated the debug defines CHECK_MAPPING_TOTAL
         and CHECK_OBJECT_REF since these bugs seem to be fixed.

25-Apr-2002 (Lars Duening)  (3.3.204)
    - (comm.c) Using unbound lambdas for prompts crashed the driver
         (reported by Gnomi).
    - (driver.h, gcollect, smalloc) When macro CHECK_OBJECT_GC_REF is
         activated, every supposedly non-object memory reference in a GC is
         checked if it points to an object. If yes, a diagnostic is printed
         to gcollect out. Requires MALLOC_TRACE to work.

21-Apr-2002 (Lars Duening)  (3.3.203)