@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 207)
-(Parent-Version lpmud 3-3 206)
-(Version-Log "Corrected a diagnostic for CHECK_OBJECT_GC_REF.")
+(Project-Version lpmud 3-3 208)
+(Parent-Version lpmud 3-3 207)
+(Version-Log "New notation ([:width]) to create empty mappings.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 07 May 2002 09:57:17 -0600")
+(Checkin-Time "Tue, 07 May 2002 11:04:31 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -59,7 +59,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.6 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.40 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.270 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.271 644))
   (HISTORY (lpmud/f/49_HISTORY 1.254 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.14 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -148,7 +148,7 @@
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.9 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.8 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.12 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.43 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.44 644))
   (src/md5.h (lpmud/L/18_md5.h 1.2 644))
   (src/md5.c (lpmud/L/19_md5.c 1.5 644))
   (src/mempools.h (lpmud/D/48_mempools.h 1.2.1.3 644))
@@ -210,7 +210,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.11 644))
   (src/port.c (lpmud/39_port.c 1.17.1.6 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.14 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.18 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.19 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -977,7 +977,7 @@
   (doc/efun/log (lpmud/p/10_log 1.2.1.2 644))
   (doc/efun/lower_case (lpmud/l/29_lower_case 1.2 644))
   (doc/efun/m_add (lpmud/V/33_m_add 1.2 644))
-  (doc/efun/m_allocate (lpmud/l/38_m_allocate 1.3 644))
+  (doc/efun/m_allocate (lpmud/l/38_m_allocate 1.4 644))
   (doc/efun/m_contains (lpmud/l/50_m_contains 1.2 644))
   (doc/efun/m_delete (lpmud/c/44_m_delete 1.5 644))
   (doc/efun/m_indices (lpmud/c/43_m_indices 1.6 644))
@@ -1187,9 +1187,9 @@
   (doc/LPC/initialisation (lpmud/c/49_initialisa 1.2 644))
   (doc/LPC/lfuns (lpmud/r/31_lfuns 1.3 644))
   (doc/LPC/lpc (lpmud/r/32_lpc 1.2 644))
-  (doc/LPC/mappings (lpmud/l/42_mappings 1.4 644))
+  (doc/LPC/mappings (lpmud/l/42_mappings 1.5 644))
   (doc/LPC/modifiers (lpmud/s/48_modifiers 1.7 644))
-  (doc/LPC/operators (lpmud/m/0_operators 1.9.1.6 644))
+  (doc/LPC/operators (lpmud/m/0_operators 1.9.1.7 644))
   (doc/LPC/pragma (lpmud/r/33_pragma 1.9 644))
   (doc/LPC/preprocessor (lpmud/r/34_preprocess 1.3 644))
   (doc/LPC/references (lpmud/c/48_references 1.3 644))
